# ipad_rust_core-copy

./: .gitignore  1.txt  1.txt.pub  ARROW_UPGRADE_IMPLEMENTATION.md  COMPLETE_iOS_Compression_Implementation.md  CREATE_XCODE_APP.md  Cargo.toml  HYBRID_APPROACH_EXPLANATION.md  PRODUCTION_FIXES_SUMMARY.md  PRODUCTION_READY.md  Package.swift  README_STATIC_LIBRARY.md  README_TRANSACTION_FIXES.md  STORYBOARD_SETUP_GUIDE.md  SWIFT_INTEGRATION.md  SWIFT_WRAPPER_README.md  XCODE_PROJECT_STRUCTURE.md  XCODE_SETUP_COMPLETE.md  XCODE_TESTING.md  build-and-run.sh  build.rs  cbindgen.toml  combined_code_content.txt  combined_schema.txt  configure_xcode_project.py  create_swiftui_project.py  debug_compression.py  debug_compression.sh  dev.db  dev.dv  fix_compression_issues.sql  generate_participant_data.py  generate_participants_swift.swift  iOS_Integration_Summary.md  iOS_Test_ViewController.swift  iPad-Rust-Core-Bridging-Header.h  setup_swiftui_simple.py  single_schema.txt  stackoverflow_question.md  strategic_goals.jsonl  (+5 more)
.sqlx/: query-04adc66b3e0e44f52654f7de93d95512025e2dee8745b350fad60989dcf0b030.json  query-07a162887dd33031b9b448c694f1d627b86978a610019bb6371ba10165dea98a.json  query-08c46dd6b4dadbd68835783ab3429bf54c19ebdeb6629d8ac5d4a71aaa5b56b0.json  query-09688d633dbe539d456af854258085908766fecb843aa6ad3305f0d5af594e8c.json  query-102bfa75ea90763f3694238b1372845a0fb3b26146803ebc0de336cc3bb88563.json  query-10a3554db3edec6a7d2ede2da69e5589ae37fe724569c6a6f283d0d587dd1456.json  query-1355d56572cf86c72efab7c00bb6f30ca5d18079db7fa661729ece91860f7613.json  query-16b0744c51f06b3a16770f38de7995dd0301b87def3fa28907c5ba8beddb8f8a.json  query-1d41affeb8a8f4c631766ec4fc7655fd2979d25b16ce97c6984a4bca574623de.json  query-1f8cd39e8f7c8cb7a578e83ebc681ad52e00b9a3906eb3f92b02e2da03622ee7.json  query-1fd4a1f48f01910cb70887bec00871ae4947a60a0ddef2b752e66854306acf2b.json  query-2058216a5c889439f43883e8e1fd976c5778fb3954edb4aeea43c982b75c6080.json  query-23def9899aae1ef1172e5d63975e9a2a4a2ba4b741ce93df345ac59fda0e65d3.json  query-2546b53f793dd580f84089c05741f878858fe7c5aa63525a06453425ab99d16a.json  query-2e53b16846cef899f7c00c5cbc1342fd70aff34d7ff4f9b72cf6116ef75ea88c.json  query-35b544e7b0e0bf9faa0ad0e5c2a4219f436272d10bc728a8ccbc1f829ed4897c.json  query-37477f8c282ef9359b8c2e839edb69eba30fcde65bccbd2315cc14b5aaf1d2e0.json  query-377e56bccea1ee24cbcd872dd4b1e564ab37984a66c31e00d427552ad9dfed66.json  query-396b8a37620408c1d84877727b18ff5efc5731c82b84a229f5277935d21c8b49.json  query-39a160cb79706de8fc1bfaf7a67eab9ee59de6313d0cdc7642301c7382c37664.json  query-3d0e1ef3feeec614b14d1824931f96f246ad454d5eb2facb6837a37570f99439.json  query-49063cf57ea60894f15e5781a535f36d382539b6f3c4096b1c05e4d7cbc5b647.json  query-49cec053a0bc4318e78f40fd48096fd405f7a20aca9dcf94d7f60b612e53fc7b.json  query-4c5e6d831dc230057ab247bcaead5dbc03c2470c4ea29f88965f15a6d1baae2f.json  query-4e2e2daf5ca4ab6a5ad18b66ceecb21a1ef426e1c71b95412580c75d08208509.json  query-4fdf17c767681503696d718e3b89312bbc7d8611155fad225ecc8e5f2ac3a8c8.json  query-53cca014823819248b4c8f01cfdc79f6f83f43aa67564a07d0af833eedfa9e08.json  query-5890fe50d5e5cb453f60fa249cfcb07ba19eec3d9b4de743b4ae47fac6f31597.json  query-58c39a537056235bb2b4e412fc861a718b0993e198aed817fcf88498c7e58003.json  query-59e1c1342d88739d13cc309ee6c2835fe6747c6ee04ed9288487406d2854b284.json  query-5a1b9c4401fbf7a2ccf431479a257fb83100c2f3ecf85a00e41ffc5836d40223.json  query-5a631c89ce8490b3c3c7da25184c370b86e028b23d9e66c2816f183464ac0b29.json  query-5b281f9aa471e85d6a9b377f2fefa9373ff004df3f72cf2ecb48eed0cc5902eb.json  query-5fcdf43300c8c42af8d9d19f17c834ce2430daa7e2e5d6e86835ac522fa4338c.json  query-63fc71212fece28be14d238ccf51e4b4377f6c9af98ff3b98b3a6e51aad06b64.json  query-6b4671b2a7be4e5286fec6252c443afa901ba0407b2c155f9838d6d7fef89797.json  (+48 more)
include/: ipad_rust_core.h  (+1 more)
src/: globals.rs  (+5 more)
(+266 files in other folders)
